--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,6 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --font-sometype-mono: 'Sometype Mono', monospace;
-
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -98,7 +96,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    font-family: "Sometype Mono";
+    font-family: var(--sometypeMono-font);
 }
 
 a {
