--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,7 +96,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    font-family: var(--sometypeMono-font);
+    /* font-family: var(--sometypeMono-font); */
 }
 
 a {
