--- a/src/components/Map/PopupMarker/styles.module.css
+++ b/src/components/Map/PopupMarker/styles.module.css
@@ -40,7 +40,7 @@
   font-family: var(--sometypeMono-font);
   font-size: 0.75rem;
   color: var(--black-900);
-
+  font-weight: 500;
   text-align: justify;
 
   /* Efeito de elevação */
