--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -3,16 +3,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6rem 10rem;
+  padding: 3rem 0.5rem;
 }
 
 .container-text {
   color: #F3E8D5;
   text-align: center;
   font-family: var(--sometypeMono-font);
-  font-size: 1.5em;
+  font-size: 1em;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  min-width: 300px;
   max-width: 900px;
+}
+
+.draw {
+  height: 200px;
 }
