--- a/src/components/SessionAppreciation/styles.module.css
+++ b/src/components/SessionAppreciation/styles.module.css
@@ -1,7 +1,6 @@
 .container {
-  z-index: 1;
   position: relative;
-  top: -50px;
+  /* top: -150px; */
   
   display: flex;
   flex-direction: column;
@@ -10,7 +9,7 @@
 
   border-radius: 80px;
 
-  background-color: #F3E8D5;
+  background-color: #FFFBF3;
   padding: 50px 100px;
 }
 
@@ -19,20 +18,38 @@
   max-width: 1440px;
 }
 
-.title {
-  font-family: var(--favela-font);
-  color: #2F2012;
-  font-weight: 400;
-  font-size: 4rem;
-  text-align: center;
+.image {
+  z-index: 1;
+  position: relative;
+  top: -150px;
+  width: 100%;
 }
 
-.image {
-  width: 100%;
+.photo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin: 80px 0;
+}
+
+.photo > img {
+  width: 60%;
+}
+
+.photo > figcaption {
+  margin-top: 10px;
+  
+  font-size: 0.8rem;
+  font-family: var(--sometypeMono-font);
+
+  color: #000000;
 }
 
 .author {
   margin-top: 70px;
+  text-align: center;
 }
 
 .author h1{
@@ -47,6 +64,8 @@
   font-family: var(--favela-font);
   font-weight: 400;
   color: #2F2012;
+
+  line-height: 2rem;
 }
 
 .author h4{
@@ -58,10 +77,15 @@
 
 
 .report {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+
   margin-top: 50px;
 }
 
-.report p{
+.report p,
+.reportImage p{
   margin-bottom: 25px;
 
   font-size: 1.75rem;
@@ -69,6 +93,44 @@
   font-weight: 400;
   text-align: justify;
   color: #2F2012;
+}
+
+.report span{
+  font-weight: 700;
+  color: #9B1915;
+}
+
+.report .highlight {
+  margin-top: 25px;
+
+  font-size: 1.75rem;
+  font-family: var(--sometypeMono-font);
+  font-weight: 500;
+  text-align: center;
+  align-self: center;
+  justify-self: center;
+  color: #2F2012;
+
+  margin: 25px 25px;
+}
+
+.reportImage {
+  display: flex;
+  flex-direction: row;
+  justify-items: s;
+  align-items: center;
+
+  margin-top: 50px;
+}
+
+.reportImage > img {
+  position: relative;
+  left: -100px;
+  flex: 1;
+}
+
+.reportImage > p {
+  flex: 1;
 }
 
 .menu {
