--- a/src/components/Map/PopupMarker/styles.module.css
+++ b/src/components/Map/PopupMarker/styles.module.css
@@ -2,12 +2,18 @@
   background-color: transparent;
 }
 
+.leaflet-popup-content-wrapper {
+  background-color: transparent;
+}
+
 .popupType {
+  position: relative;
+  top: 0.5rem;
+
   display: flex;
   width: fit-content;
 
-  padding: 16px 8px;
-  padding-bottom: 6px;
+  padding: 0 8px;
   margin-left: 30px;
 
   border-top-left-radius: 22px;
@@ -16,8 +22,7 @@
   font-family: var(--sometypeMono-font);
   font-weight: 700;
   font-size: 1rem;
-  line-height: 0.75rem;
-  color: #F3E8D5;
+  line-height: 0.5rem;
 }
 
 .popupTitle {
@@ -47,6 +52,31 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4); /* elevation = 4.dp */
   /* Cor ambiente */
   filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25)); /* ambientColor = Color(0x40000000) */
+}
+
+.popupText p {
+  height: 100%;
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.popupText p::-webkit-scrollbar {
+  width: 15px;
+}
+
+.popupText p::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.popupText p::-webkit-scrollbar-thumb {
+  background-color: #fff1d6;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+.popupText p::-webkit-scrollbar-thumb:hover {
+  background-color: #faefd9;
 }
 
 .leaflet-popup-content-wrapper {
