--- a/src/components/SessionWhy/styles.module.css
+++ b/src/components/SessionWhy/styles.module.css
@@ -3,6 +3,7 @@
   top: -150px;
 
   padding: 50px 100px;
+  padding-bottom: 0px;
   
   display: flex;
   flex-direction: column;
@@ -18,7 +19,6 @@
 .wrapper {
   width: 100%;
   max-width: 1440px;
-  padding-bottom: 400px;
 }
 
 .report {
@@ -61,4 +61,11 @@
 
   background-color: #FFFBF3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.image {
+  width: 115vw;
+  position: relative;
+  margin-top: -30px;
+  background: linear-gradient(to bottom, transparent 78%, #FFFBF3 22%);
 }
