--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -36,7 +36,7 @@
   margin-left: 16px;
 }
 
-.menu > li > button {
+.menuButton {
   font-weight: 400;
   font-size: 0.9375rem;
   text-align: center;
@@ -44,5 +44,14 @@
   font-family: var(--sometypeMono-font);
   
   background-color: transparent;
-  border: 0;
+  border: 2px solid transparent;
+  padding: 10px;
+}
+
+.menuButton:hover {
+  cursor: pointer;
+  background-color: #F3E8D510;
+  padding: 10px;
+  border-bottom: 2px solid #F3E8D5;
+  border-radius: 16px;
 }
