--- a/src/components/SessionAppreciation/styles.module.css
+++ b/src/components/SessionAppreciation/styles.module.css
@@ -114,6 +114,8 @@
 
 .reportImage {
   display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
   flex-direction: row;
   justify-items: s;
   align-items: center;
@@ -129,4 +131,16 @@
 
 .reportImage > p {
   flex: 1;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 25px 40px;
+  }
+}
+
+@media (max-width: 667px) {
+  .container {
+    padding: 25px 20px;
+  }
 }
