--- a/src/components/SessionPanorama/styles.module.css
+++ b/src/components/SessionPanorama/styles.module.css
@@ -127,3 +127,15 @@
   margin-top: 10px;
   margin-bottom: 50px;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 25px 40px;
+  }
+}
+
+@media (max-width: 667px) {
+  .container {
+    padding: 25px 20px;
+  }
+}
