--- a/src/components/About/Motivation/styles.module.css
+++ b/src/components/About/Motivation/styles.module.css
@@ -87,3 +87,15 @@
   margin-bottom: 2px;
   text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 50px 40px;
+  }
+}
+
+@media (max-width: 667px) {
+  .container {
+    padding: 50px 20px;
+  }
+}
