--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -65,3 +65,15 @@
   border-bottom: 2px solid #F3E8D5;
   border-radius: 16px;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 25px 40px;
+  }
+}
+
+@media (max-width: 667px) {
+  .container {
+    padding: 25px 20px;
+  }
+}
