--- a/src/components/SessionAffection/styles.module.css
+++ b/src/components/SessionAffection/styles.module.css
@@ -142,3 +142,15 @@
 
   color: #000000;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 25px 40px;
+  }
+}
+
+@media (max-width: 667px) {
+  .container {
+    padding: 25px 20px;
+  }
+}
