--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,12 +106,6 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
 .leaflet-popup-content-wrapper {
   background-color: transparent !important;
   box-shadow: 0 0 0 transparent !important;
@@ -121,3 +115,22 @@ a {
   background-color: #FFFBF3 !important;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2) !important;
 }
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+@media (max-width: 768px) {
+  :root {
+    font-size: 85%;
+  }
+}
+
+@media (max-width: 667px) {
+  :root {
+    font-size: 70%;
+  }
+}
+
