--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -69,6 +69,15 @@
 }
 
 .menuToggle {
+  all: unset;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menuToggle > img {
   width: 36px;
   height: 36px;
 }
@@ -88,10 +97,6 @@
 
   .title h2 {
     font-size: 24px;
-  }
-
-  .toggleMenu {
-    display: block;
   }
 
   .menu {
@@ -116,7 +121,6 @@
     flex-direction: column;
     align-items: start;
   }
-
 
   .principal {
     width: 100%;
