--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -9,23 +9,23 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.title {
+.menuTitle {
   flex-direction: column;
 }
 
-.title:hover {
+.menuTitle:hover {
   cursor: pointer;
 }
 
-.title h1, 
-.title h2 {
+.menuTitle h1, 
+.menuTitle h2 {
   font-family: var(--favela-font);
   color: #F3E8D5;
   font-weight: 400;
   font-size: 48px;
 }
 
-.title h2 {
+.menuTitle h2 {
   font-size: 36px;
 }
 
@@ -91,12 +91,12 @@
 }
 
 @media (max-width: 1000px) {
-  .title h1 {
-    font-size: 2rem;
+  .menuTitle h1 {
+    font-size: 1.8rem;
   }
 
-  .title h2 {
-    font-size: 1.7rem;
+  .menuTitle h2 {
+    font-size: 1.5rem;
   }
 
   .menu {
@@ -108,13 +108,15 @@
   }
 
   .open {
-    height: 360px;
+    height: 470px;
     padding-top: 20px;
+    padding-bottom: 20px;
     opacity: 100;
   }
   
   .menuButton {
     font-size: 1.5rem;
+    padding: 15px 10px;
   }
 
   .container {
