--- a/src/components/SessionDisappearance/styles.module.css
+++ b/src/components/SessionDisappearance/styles.module.css
@@ -142,6 +142,10 @@
   color: #000000;
 }
 
+.margin {
+  margin-bottom: 60px;
+}
+
 @media (max-width: 768px) {
   .container {
     padding: 25px 40px;
